fixing layout
- added padding
-fixing layout issue (width: 100;px, height 100px)

--- a/starter-site-22-main/css/main.css
+++ b/starter-site-22-main/css/main.css
@@ -95,8 +95,9 @@ padding: 30px;
 .grid-setup-left,
 .grid-setup-middle,
 .grid-setup-right {
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
+  padding: 30px;
+  height: 100px;
+  width: 100px; /* Should be removed. Only for demonstration */
 }
 .grid-setup-left {
     grid-area: left;
@@ -116,6 +117,10 @@ padding: 30px;
   opacity: 0;
   background-color: rgba(127, 17, 224, .25);
   max-width: fit-content;
+}
+.overlay-wrapper img{
+  width: 100%;
+  height: auto;
 }
 
 .double-gallery-grid {
